--- a/.github/workflows/standupAzureController.yml
+++ b/.github/workflows/standupAzureController.yml
@@ -49,15 +49,15 @@ jobs:
       publicIpAddress: ${{steps.azure_deploy.outputs.publicIPAddress}}
       resourceGroupName: ${{steps.azure_deploy.outputs.resourceGroupName}}
     steps:
-      - name: Test Env Json Var
-        env: 
-          vmPublicKeyParam: '{"reference":{"keyVault":{"id":"/subscriptions/${{secrets.AZURE_SUBSCRIPTION_ID}}/resourceGroups/${{env.AZURE_RESOURCE_GROUP}}/providers/Microsoft.KeyVault/vaults/${{github.event.inputs.azure_key_vault_name}}"},"secretName":"${{github.event.inputs.vm_admin_public_key_secret_name}}"}}'
-        run: |
-          echo "vmPublicKeyParam= '$vmPublicKeyParam'"
-          # ${{fromJson(env.vmPublicKeyParam)}}
+      # - name: Test Env Json Var
+      #   env: 
+      #     vmPublicKeyParam: '{"reference":{"keyVault":{"id":"/subscriptions/${{secrets.AZURE_SUBSCRIPTION_ID}}/resourceGroups/${{env.AZURE_RESOURCE_GROUP}}/providers/Microsoft.KeyVault/vaults/${{github.event.inputs.azure_key_vault_name}}"},"secretName":"${{github.event.inputs.vm_admin_public_key_secret_name}}"}}'
+      #   run: |
+      #     echo "vmPublicKeyParam= '$vmPublicKeyParam'"
+      #     # ${{fromJson(env.vmPublicKeyParam)}}
 
-      - name: "DEBUG: STOP WORKFLOW"
-        run: exit 1
+      # - name: "DEBUG: STOP WORKFLOW"
+      #   run: exit 1
 
       - name: Checkout Repository
         uses: actions/checkout@master
@@ -89,6 +89,7 @@ jobs:
             --location ${{github.event.inputs.azure_location}} \
             --tags project=${PROJECT_PREFIX} \
             --verbose
+      
       - name: Create Azure Key Vault
         run: |
           az keyvault create \
@@ -99,16 +100,6 @@ jobs:
             --enabled-for-template-deployment true \
             --verbose
 
-      - name: Test Env Json Var
-        env: 
-          vmPublicKeyParam: '{"reference":{"keyVault":{"id":"/subscriptions/${{secrets.AZURE_SUBSCRIPTION_ID}}/resourceGroups/${AZURE_RESOURCE_GROUP}/providers/Microsoft.KeyVault/vaults/${{github.event.inputs.azure_key_vault_name}}"},"secretName":"${{github.event.inputs.vm_admin_public_key_secret_name}}"}}'
-        run: |
-          echo ${{fromJson(env.vmPublicKeyParam)}}
-
-      - name: "DEBUG: STOP WORKFLOW"
-        run: exit 1
-
-
       - name: Set Azure Key Vault Secret - vm public key
         run: |
           az keyvault secret set \
@@ -116,6 +107,7 @@ jobs:
             --name ${{github.event.inputs.vm_admin_public_key_secret_name}} \
             --file ${KEY_FILE}.pub \
             --verbose
+      
       - name: Set Azure Key Vault Secret - vm private key
         run: |
           az keyvault secret set \
@@ -129,7 +121,7 @@ jobs:
 
       - name: Run ARM Deploy
         env: 
-          vmPublicKeyParam: '{"reference":{"keyVault":{"id":"/subscriptions/${{secrets.AZURE_SUBSCRIPTION_ID}}/resourceGroups/${AZURE_RESOURCE_GROUP}/providers/Microsoft.KeyVault/vaults/${{github.event.inputs.azure_key_vault_name}}"},"secretName":"${{github.event.inputs.vm_admin_public_key_secret_name}}"}}'
+          vmPublicKeyParam: '{"reference":{"keyVault":{"id":"/subscriptions/${{secrets.AZURE_SUBSCRIPTION_ID}}/resourceGroups/${{env.AZURE_RESOURCE_GROUP}}/providers/Microsoft.KeyVault/vaults/${{github.event.inputs.azure_key_vault_name}}"},"secretName":"${{github.event.inputs.vm_admin_public_key_secret_name}}"}}'
         id: azure_deploy
         # https://github.com/marketplace/actions/deploy-azure-resource-manager-arm-template
         uses: azure/arm-deploy@v1
